# migi

./: .gitignore  CMakeLists.txt  Main.qml  README.md  anilist.cpp  anilist.h  appsettingskey.cpp  databasemanager.cpp  databasemanager.h  filewriter.cpp  filewriter.h  main.cpp  manual.md  networkmanager.cpp  networkmanager.h  oauthimplicit.cpp  oauthimplicit.h  qsdata.cpp  qsdata.h  settings.cpp  settings.h
assets/: anilist.h  anilistdatabasemanager.h  anime.h  animedetailmodel.h  animelistmodel.h  appresourcekey.h  appsettingskey.h  databasemanager.h  filewriter.h  gql.qrc  networkmanager.h  oauthimplicit.h  qsdata.h  resources.h  settings.h
assets/gql/: Media.gql  MediaFields.gql  MediaListCollection.gql  MediaListFields.gql  ViewerId.gql  ViewerName.gql  source.txt
assets/sql/: CreateAnimeGenreTable.sql  CreateAnimeStatusTable.sql  CreateAnimeStudioTable.sql  CreateAnimeSynonymTable.sql  CreateAnimeTable.sql  CreateEntryStatusTable.sql  CreateEntryTable.sql  CreateFormatTable.sql  CreateGenreTable.sql  CreateMediaStatusTable.sql  CreateModifiedTrigger.sql  CreateStatusTable.sql  CreateStudioTable.sql
assets/sql/queries/: FindUpdatedEntries.sql  GetAnimeAndEntryData.sql  GetAnimeRows.sql  GetEntryRows.sql  PopulateTables.sql  QueryAnimeGenre.sql
assets/sql/tables/: CreateAnimeListView.sql  CreateAnimeSeasonTable.sql  CreateAnimeSynonymsTable.sql  CreateAnimeTable.sql  CreateEntryTable.sql  CreateGenreTable.sql  CreateMediaFormatTable.sql  CreateSeasonTable.sql
assets/sql/triggers/: CreateModifiedTrigger.sql
docs/: CNAME
src/: anilist.cpp  anilistdatabasemanager.cpp  anime.cpp  animedetailmodel.cpp  animelistmodel.cpp  appresourcekey.cpp  appsettingskey.cpp  databasemanager.cpp  filewriter.cpp  networkmanager.cpp  oauthimplicit.cpp  qsdata.cpp  resources.cpp  settings.cpp
src/QML/: AnimeDetail.qml  AnimeLibrary.qml  AnimeList.qml  AppSettings.qml  IconButton.qml  Sidebar.qml  qmldir
